--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipDressDataGrid.cshtml
@@ -21,6 +21,16 @@
     columns.Add(c => c.CleanDress_Pressure).Titled("CleanDress_Pressure").Css("tablesaw-priority-0");
     columns.Add(c => c.Time_DressCycleTime).Titled("Time_DressCycleTime").Css("tablesaw-priority-0");
 
+    columns.Add(c => c.GunTCP_X).Titled("GunTCP_X").Css("tablesaw-priority-0");
+    columns.Add(c => c.GunTCP_Y).Titled("GunTCP_Y").Css("tablesaw-priority-0");
+    columns.Add(c => c.GunTCP_Z).Titled("GunTCP_Z").Css("tablesaw-priority-0");
+    columns.Add(c => c.GunRefTCP_X).Titled("GunRefTCP_X").Css("tablesaw-priority-0");
+    columns.Add(c => c.GunRefTCP_Y).Titled("GunRefTCP_Y").Css("tablesaw-priority-0");
+    columns.Add(c => c.GunRefTCP_Z).Titled("GunRefTCP_Z").Css("tablesaw-priority-0");
+    columns.Add(c => c.NomTCP_X).Titled("NomTCP_X").Css("tablesaw-priority-0");
+    columns.Add(c => c.NomTCP_Y).Titled("NomTCP_Y").Css("tablesaw-priority-0");
+    columns.Add(c => c.NomTCP_Z).Titled("NomTCP_Z").Css("tablesaw-priority-0");
+
 
 }).Sortable().Filterable().Pageable(pager =>
 {
