--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
@@ -90,6 +90,9 @@
             reloadFailed: function (result) {
                 console.log(result);
                 $('[data-name= "TipLifeExpectationsGrid"]').html($("#Error", result.responseText).html());
+            },
+            reloadEnded: function () {
+                EnableInterfaceEvents();
             }
         });
 
@@ -102,6 +105,9 @@
             reloadFailed: function (result) {
                 console.log(result);
                 $('[data-name= "TipwearBeforeChangeGrid"]').html($("#Error", result.responseText).html());
+            },
+            reloadEnded: function () {
+                EnableInterfaceEvents();
             }
         });
 
@@ -129,10 +135,10 @@
             reloadFailed: function (result) {
                 console.log(result);
                 $('[data-name= "TCP_LOGGrid"]').html($("#Error", result.responseText).html());
+            },
+            reloadEnded: function () {
+                EnableInterfaceEvents();
             }
         });
-
-        //enable tooltips
-        $('[data-toggle="popover"]').tooltip();
-
+        EnableInterfaceEvents();
     </script>
