--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -22,7 +22,14 @@
         $('#TipwearBeforeChangeGrid').mvcgrid({
             sourceUrl: '@Url.Action("_TipwearBeforeChangeGrid")', // Grid source url string
             requestType: 'get', // Ajax grid request type
-            reload: true // Grid reload indicator
+            reload: true, // Grid reload indicator
+            reloadFailed: function (result) {
+                console.log(result);
+                $('[data-name= "TipwearBeforeChangeGrid"]').html($("#Error", result.responseText).html());
+            },
+            reloadEnded: function () {
+                EnableInterfaceEvents();
+            }
         });
     </script>
 }
