last launch sync

--- a/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/Index.cshtml
@@ -25,7 +25,7 @@
             <p>
 
 
-            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "far fa-file-alt", "Insert new work", helperText: "inser into Follow Up list Launch  Welding Master")
+            @MyHtmlHelpers.EquiLink("/Welding//ToDoList_Remark/Index", "far fa-file-alt", "Insert new work", helperText: "insert into Follow Up list Launch  Welding Master")
             <p></p>
             @MyHtmlHelpers.EquiLink("/Welding//ToDoLists/Index", "far fa-file-alt", "Manage ToDoList", helperText: "Manage Follow Up list Launch Work Welding Master")
             <p>
@@ -48,7 +48,7 @@
             <p></p>
             @MyHtmlHelpers.EquiLink("/Welding/Launch/BosProgramAvailable", "far fa-file-alt", "FreePrograms", helperText: "check in welding Timers for not used programs")
             <p></p>
-            @MyHtmlHelpers.EquiLink("/Welding/Launch/WeldtimeSpotsSetup", "far fa-file-alt", "WeldtimeCheck", helperText: "check the  total weldtimes in from all spots")
+            @MyHtmlHelpers.EquiLink("/Welding/Launch/WeldtimeSpotsSetup", "far fa-file-alt", "WeldtimeCheck", helperText: "check the  total weldtimes all spots")
             <p></p>
 
         </div>
