--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipLifeExpectationsGrid.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipLifeExpectationsGrid.cshtml
@@ -2,23 +2,24 @@
 
 @Html.Grid(Model).Named("TipLifeExpectationsGrid").Build(columns =>
 {
-    columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
+    columns.Add(c => c.controller_name).Titled("Robot").Css("tablesaw-priority-persist");
     columns.Add(c => c.Tool_Nr).Titled("Nr");
     columns.Add(c => c.LastTipchange).Titled("LastTipchange").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-    columns.Add(c => c.maxWearInCalc).Titled("maxWear").Css("d-none d-lg-table-cell");
-    columns.Add(c => c.minWearInCalc).Titled("minWear").Css("d-none d-lg-table-cell");
-    columns.Add(c => c.countWearInCalc).Titled("count").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.maxWearInCalc).Titled("maxWear");
+    columns.Add(c => c.minWearInCalc).Titled("minWear");
+    columns.Add(c => c.countWearInCalc).Titled("count");
 
-    columns.Add(c => c.avgESTnSpotsFixedWearBefore100).Titled("SpotsFixedBefore100").Css("d-none d-lg-table-cell");
-    columns.Add(c => c.avgESTnSpotsMoveWearBefore100).Titled("SpotsMoveBefore100").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.avgESTnSpotsFixedWearBefore100).Titled("SpotsFixedBefore100").Css("tablesaw-priority-0");
+    columns.Add(c => c.avgESTnSpotsMoveWearBefore100).Titled("SpotsMoveBefore100").Css("tablesaw-priority-0");
 
     columns.Add(c => c.avgPartsFixedBefore100).Titled("PartsFixedBefore100");
     columns.Add(c => c.avgPartsMoveBefore100).Titled("PartsMoveBefore100");
 
-    columns.Add(c => c.TotWearComponent).Titled("WearComp").Css("d-none d-lg-table-cell");
+    columns.Add(c => c.TotWearComponent).Titled("WearComp").Css("tablesaw-priority-6");
 }).Sortable().Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
-}).Empty("No data found").Css("table-hover")
+}).Empty("No data found").Css("table-hover tablesaw-on")
+
